tests/fixtures/invalid/int_rshift_str.py
# Cannot right shift Int and Str
x: int = 1 >> "hello"
